--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -42,4 +42,12 @@ body {
 .wrapper {
     width: 100%;
     height: 100%;
+    position: relative;
+
+    &__loading {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
 }
