--- a/src/styles/message.scss
+++ b/src/styles/message.scss
@@ -1,4 +1,5 @@
 .message {
+    $self: &;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -7,23 +8,26 @@
     &-me {
         align-items: end;
 
-        div {
-            border-radius: 8px 8px 0 8px;
-            background: linear-gradient(90deg, #DB557A, #832351);
+        .message__item {
+            border-radius: 16px 16px 0 16px;
+            background: linear-gradient(90deg, #4e5dca, #B330B9);
         }
     }
 
     &-him {
         align-items: start;
 
-        div {
-            border-radius: 8px 8px 8px 0;
-            background-color: #694343;
+        .message__item {
+            border-radius: 16px 16px 16px 0;
+            padding: 5px 15px;
+            background: linear-gradient(90deg, #8a404b, #4E3345);
         }
     }
 
     &__item {
-        padding: 5px 15px;
+        display: flex;
+        align-items: end;
+        padding: 5px 5px 5px 15px;
         max-width: 250px;
         box-shadow: 0 0 10px rgba($color: #000000, $alpha: .2);
 
@@ -31,11 +35,19 @@
             color: #fff;
         }
 
-    }
+        svg {
+            height: 20px;
+            width: 20px;
+            color: #fff;
+            opacity: .8;
+            margin-left: 5px;
+        }
 
-    span {
-        color: rgba($color: #000000, $alpha: .6);
-        font-size: 12px;
-        margin-top: 5px;
+        span {
+            color: #fff;
+            opacity: .5;
+            font-size: 12px;
+            margin-left: 5px;
+        }
     }
 }
