--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -21,6 +21,10 @@
 
         h1 {
             color: #ff0000;
+
+            @media (max-width: 400px) {
+                font-size: 20px;
+            }
         }
     }
 
