--- a/src/styles/chat.scss
+++ b/src/styles/chat.scss
@@ -215,7 +215,7 @@
             overflow-y: scroll;
             padding: 10px;
             box-shadow: inset 0 0 10px rgba($color: #000000, $alpha: .1);
-            background: url('../assets/fonChat.png');
+            // background: url('../assets/fonChat.png');
             background-size: cover;
 
             &::-webkit-scrollbar {
