--- a/src/styles/chat.scss
+++ b/src/styles/chat.scss
@@ -216,7 +216,8 @@
             padding: 10px;
             box-shadow: inset 0 0 10px rgba($color: #000000, $alpha: .1);
             // background: url('../assets/fonChat.png');
-            background-size: cover;
+            background-color: #ffdcf2;
+            // background-size: cover;
 
             &::-webkit-scrollbar {
                 width: 5px;
