--- a/src/styles/chat.scss
+++ b/src/styles/chat.scss
@@ -14,6 +14,15 @@
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
         border-radius: 8px 8px 0 0;
 
+        &--floatBtn {
+            bottom: -100%;
+            transition: all .4s;
+
+            &-visib {
+                bottom: 60px;
+            }
+        }
+
         &-show {
             bottom: 0;
         }
